Added a back button in the recipes, added images to the recipes, fixed the description of the recipes, now the tag is <h2> not <p> and added the list of instructions in the spaghetti recipe

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p>Click in the recipe that you want to see</p>
+        <p>Click in the recipe that you want to see:</p>
         <ul>
             <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
             <li><a href="./recipes/soup.html">Soup</a></li>
