--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -6,12 +6,14 @@
     </head>
     <body>
         <h1>Soup recipe</h1>
-        <p>Yummy soup recipe</p>
+        <img src="../images/soup.jpg">
+        <h2>Yummy soup recipe</h2>
         <ol>
             <li>First fill a plate with water</li>
             <li>next add salt</li>
             <li>idk maybe add some chicken</li>
             <li>enjoy your soup</li>
         </ol>
+        <a href="../index.html">GO BACK TO MENU</a>
     </body>
 </html>
