--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,9 +6,13 @@
     </head>
     <body>
         <h1>Spaghetti recipe</h1>
-        <p>This is an awesome recipe that helps you cook your own spaghetti</p>
+        <img src="../images/spaghetti.jpg">
+        <h2>This is an awesome recipe that helps you cook your own spaghetti</h2>
         <ol>
-            <li></li>
+            <li>Firs find a plate</li>
+            <li>then put spaghetti on it</li>
+            <li>DONEEEE!!! :) ENJOY</li>
         </ol>
+        <a href="../index.html">GO BACK TO MENU</a>
     </body>
 </html>
