Added ingredient list and steps list in all the recipes, changed the placement of the back button, from bottom to top

--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -5,15 +5,23 @@
         <title>Soup</title>
     </head>
     <body>
+        <a href="../index.html">GO BACK TO MENU</a>
         <h1>Soup recipe</h1>
         <img src="../images/soup.jpg">
         <h2>Yummy soup recipe</h2>
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>plate</li>
+            <li>water</li>
+            <li>salt</li>
+            <li>chicken</li>
+        </ul>
+        <h3>Steps:</h3>
         <ol>
             <li>First fill a plate with water</li>
             <li>next add salt</li>
             <li>idk maybe add some chicken</li>
             <li>enjoy your soup</li>
         </ol>
-        <a href="../index.html">GO BACK TO MENU</a>
     </body>
 </html>
