--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -5,14 +5,20 @@
         <title>Spaghetti</title>
     </head>
     <body>
+        <a href="../index.html">GO BACK TO MENU</a>
         <h1>Spaghetti recipe</h1>
         <img src="../images/spaghetti.jpg">
         <h2>This is an awesome recipe that helps you cook your own spaghetti</h2>
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>plate</li>
+            <li>spaghetti</li>
+        </ul>
+        <h3>Steps:</h3>
         <ol>
             <li>Firs find a plate</li>
             <li>then put spaghetti on it</li>
             <li>DONEEEE!!! :) ENJOY</li>
         </ol>
-        <a href="../index.html">GO BACK TO MENU</a>
     </body>
 </html>
