Added the recipe named coffee, modified the index with the coffee entry and modified minor things in the soup recipe html

--- a/recipes/soup.html
+++ b/recipes/soup.html
@@ -14,7 +14,7 @@
             <li>plate</li>
             <li>water</li>
             <li>salt</li>
-            <li>chicken</li>
+            <li>maybe some chicken</li>
         </ul>
         <h3>Steps:</h3>
         <ol>
