--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <ul>
             <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
             <li><a href="./recipes/soup.html">Soup</a></li>
+            <li><a href="./recipes/coffee.html">Coffee</a></li>
         </ul>
     </body>
 </html>
